examples/type_system/failing/115_keyword_alias_elif.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

if true { 1 } elif false { 2 } else { 3 }
